--- a/Stream-3/Full-Stack-Development/8.Django-Blog-Part-Four/2.Categorise-The-Posts-Using-Tags/Blog_prj/Blog_app/templates/postdetail.html
+++ b/Stream-3/Full-Stack-Development/8.Django-Blog-Part-Four/2.Categorise-The-Posts-Using-Tags/Blog_prj/Blog_app/templates/postdetail.html
@@ -17,7 +17,7 @@
                     <p>
                         <button class="btn btn-default" onclick="location.href='/blog';">Back To Blog</button>
                     </p>
-                    <p>{{ post.published_date }} | Views {{ post.views }}</p>
+                    <p>{{ post.published_date }} | <strong>Views:</strong> {{ post.views }} | <strong>Tag:</strong> {{ post.tag }}</p>
                 </div>
             </div>
         </div>
