--- a/Stream-3/Full-Stack-Development/8.Django-Blog-Part-Four/3.Integrate-Comments-Into-A-Blog/Blog_prj/Blog_app/templates/blogposts.html
+++ b/Stream-3/Full-Stack-Development/8.Django-Blog-Part-Four/3.Integrate-Comments-Into-A-Blog/Blog_prj/Blog_app/templates/blogposts.html
@@ -19,7 +19,7 @@
                         <p>
                             <button class="btn btn-default" onclick="location.href={{ post.id }};">Read More</button>
                         </p>
-                        <p>{{ post.published_date }} | Views {{ post.views }}</p>
+                        <p>{{ post.published_date }} | <strong>Views:</strong> {{ post.views }} | <strong>Tag:</strong> {{ post.tag }}</p>
                     </div>
                 </div>
             </div>
