updated challenge for using slugs in url opposed to post.id, this meant I had to also revise all lesson projects versions since this challeneg as I had moved on ahead while completing the challenge on the side, apert from a few of the projects displaying different posts when the site is run due to having to delete and recreate the database in each, all seem to be working well now

--- a/Stream-3/Full-Stack-Development/7.Django-Blog-Part-Three/3.Wire-Up-The-Back-To-Posts-Button/challenge_solution/Blog_prj/Blog_app/templates/blogposts.html
+++ b/Stream-3/Full-Stack-Development/7.Django-Blog-Part-Three/3.Wire-Up-The-Back-To-Posts-Button/challenge_solution/Blog_prj/Blog_app/templates/blogposts.html
@@ -17,7 +17,9 @@
                     <div class="col-xs-9">
                         <p>{{ post.content|truncatewords:30 }}</p>
                         <p>
-                            <button class="btn btn-default" onclick="location.href={{ post.id }};">Read More</button>
+                            <button class="btn btn-default" onclick="location.href='{% url 'post_detail' post.slug %}'">
+                                Read More
+                            </button>
                         </p>
                         <p>{{ post.published_date }}</p>
                     </div>
