--- a/Stream-3/Full-Stack-Development/8.Django-Blog-Part-Four/3.Integrate-Comments-Into-A-Blog/Blog_prj/Blog_app/templates/blogposts.html
+++ b/Stream-3/Full-Stack-Development/8.Django-Blog-Part-Four/3.Integrate-Comments-Into-A-Blog/Blog_prj/Blog_app/templates/blogposts.html
@@ -17,9 +17,12 @@
                     <div class="col-xs-9">
                         <p>{{ post.content|truncatewords:30 }}</p>
                         <p>
-                            <button class="btn btn-default" onclick="location.href={{ post.id }};">Read More</button>
+                            <button class="btn btn-default" onclick="location.href='{% url 'post_detail' post.slug %}'">
+                                Read More
+                            </button>
                         </p>
-                        <p>{{ post.published_date }} | <strong>Views:</strong> {{ post.views }} | <strong>Tag:</strong> {{ post.tag }}</p>
+                        <p>{{ post.published_date }} | <strong>Views:</strong> {{ post.views }} |
+                            <strong>Tag:</strong> {{ post.tag }}</p>
                     </div>
                 </div>
             </div>
