--- a/Stream-3/Full-Stack-Development/9.Django-Blog-Part-Five/Blog_prj/templates/base.html
+++ b/Stream-3/Full-Stack-Development/9.Django-Blog-Part-Five/Blog_prj/templates/base.html
@@ -21,9 +21,9 @@
 <header>
     <!-- Navigation Begin -->
     <nav>
-        <ul class="topnav">
-            <li><a href="/blog">Home</a></li>
-            <li><a href="/blog/top-five">Top Five Posts</a></li>
+        <ul class="top-nav">
+            <li><a href="{% url 'home' %}">Home</a></li>
+            <li><a href="{% url 'top-five' %}">Top Five Posts</a></li>
         </ul>
     </nav>
     <!-- Navigation End -->
