I had a few issues as I had earlier made a design choice to change my code from the lessons to keep friendlier url slugs, this indeed made my life more difficult, as I had to then modify the functions for new post and edit post and the redirects to use and return the slugs opposed to the title id, after my learning experience earlier today on the previous challenge, I was able to accomplish this without too many problems, the only thing I can't really decide on, is where to put the new post button. I have for now put it next to the read more button, but its not ideal positioning, I perhaps would rather integrate it in to the navigation bar opposed to having a button at all. For me this would be a much better design choice. Anyway here is a quick gif of it all working with friendly url slugs.

--- a/Stream-3/Full-Stack-Development/9.Django-Blog-Part-Five/2.Create-A-Blog-Post-Form/Blog_prj/Blog_app/templates/blogposts.html
+++ b/Stream-3/Full-Stack-Development/9.Django-Blog-Part-Five/2.Create-A-Blog-Post-Form/Blog_prj/Blog_app/templates/blogposts.html
@@ -15,8 +15,10 @@
                     <div class="col-xs-9">
                         <p>{{ post.content|truncatewords:30 }}</p>
                         <p>
-                            <button class="btn btn-default" onclick="location.href='{% url 'post_detail' post.slug %}'">
+                            <button class="btn btn-default" onclick="location.href='{% url 'post-detail' post.slug %}'">
                                 Read More
+                            </button>
+                            <button class="btn btn-default" onclick="location.href='{% url 'new_post' %}'">New Post
                             </button>
                         </p>
                         <p>{{ post.published_date }} | <strong>Views:</strong> {{ post.views }} |
