--- a/Stream-3/Full-Stack-Development/9.Django-Blog-Part-Five/2.Create-A-Blog-Post-Form/Blog_prj/Blog_app/templates/postdetail.html
+++ b/Stream-3/Full-Stack-Development/9.Django-Blog-Part-Five/2.Create-A-Blog-Post-Form/Blog_prj/Blog_app/templates/postdetail.html
@@ -17,6 +17,7 @@
                     <p>{{ post.content|linebreaks }}</p>
                     <p>
                         <button class="btn btn-default" onclick="location.href='/'">Back To Blog</button>
+                        <button class="btn btn-default" onclick="location.href='{% url 'edit-post' post.slug %}'">Edit</button>
                     </p>
                     <p>{{ post.published_date }} | <strong>Views:</strong> {{ post.views }} |
                         <strong>Tag:</strong> {{ post.tag }}</p>
