--- a/Stream-1/Front-End-Development/Final-Project/Band-Project/css/style.css
+++ b/Stream-1/Front-End-Development/Final-Project/Band-Project/css/style.css
@@ -23,7 +23,6 @@ body {
     color: #fff;
 }
 
-
 /************************* Page Style *************************/
 
 #body-content {
@@ -48,14 +47,12 @@ body {
     filter: alpha(opacity=0.9);
 }
 
-
 /*** override jumbotron ***/
 
 .jumbotron P {
     font-size: 1.2em;
     font-family: sans-serif;
 }
-
 
 /************************* Carousel Styling - Carousel Base Class *************************/
 
@@ -64,13 +61,11 @@ body {
     margin-bottom: 25px;
 }
 
-
 /*** Since positioning the image, we need to help out the caption ***/
 
 .carousel-caption {
     z-index: 10;
 }
-
 
 /*** Declare heights because of positioning of img element ***/
 
@@ -101,7 +96,6 @@ body {
     margin-left: -200px;
 }
 
-
 /************************* Meet the Band Nav Tabs Style *************************/
 
 .nav-pills {
@@ -113,7 +107,6 @@ body {
     margin: 20px 0;
 }
 
-
 /************************* Itunes Search & Song table style *************************/
 
 .form-control {
@@ -124,7 +117,6 @@ body {
     max-width: 450px;
     margin-bottom: 5px;
 }
-
 
 /*** Override Bootstrap CSS ***/
 
@@ -185,7 +177,6 @@ table tbody tr td a {
     border-radius: 20px;
 }
 
-
 /************************* Audio Player Style *************************/
 
 #audio-player,
@@ -195,9 +186,7 @@ table tbody tr td a {
     margin: 5px;
 }
 
-
 /************************* Modal Style *************************/
-
 
 /* Add a dark gray background color to the modal header and center text */
 
@@ -229,7 +218,6 @@ h4,
 .modal label {
     color: #888;
 }
-
 
 /************************* Contact Form Styling *************************/
 
@@ -269,7 +257,6 @@ fieldset {
     margin: 10px;
 }
 
-
 /************************* Google Map Style *************************/
 
 #googleMap {
@@ -284,7 +271,6 @@ fieldset {
 .map-pin-text {
     color: #000;
 }
-
 
 /************************* Footer Style *************************/
 
@@ -302,7 +288,6 @@ footer p {
     margin-top: 20px;
 }
 
-
 /*** Social Icons Style ***/
 
 footer ul {
@@ -317,10 +302,12 @@ footer ul {
 }
 
 .fa {
+    transform: scale(0.8);
     -webkit-transform: scale(0.8);
-    /* Browser Variations: */
     -moz-transform: scale(0.8);
     -o-transform: scale(0.8);
+
+    transition-duration: 0.5s;
     -webkit-transition-duration: 0.5s;
     -moz-transition-duration: 0.5s;
     -o-transition-duration: 0.5s;
@@ -328,11 +315,11 @@ footer ul {
 }
 
 .fa:hover {
+    transform: scale(1.2);
     -webkit-transform: scale(1.2);
     -moz-transform: scale(1.2);
     -o-transform: scale(1.2);
 }
-
 
 /*** Multicoloured Hover Variations ***/
 
@@ -356,9 +343,7 @@ footer ul {
     color: #f1df23;
 }
 
-
 /************************* Responsive Design Handling *************************/
-
 
 /*** Landscape Phone to Portrait Tablet ***/
 
@@ -368,6 +353,7 @@ footer ul {
         padding-top: 5px;
         padding-bottom: 42px;
     }
+
     /*** NavBar Style - Prevents it from sitting on top of the content ***/
     .navbar-fixed-top {
         position: relative;
@@ -376,6 +362,7 @@ footer ul {
     .navbar-collapse {
         max-height: none;
     }
+
     /*** Style the Main Content & Containers for Mobile ***/
     .container-fluid,
     .row-fluid {
@@ -385,7 +372,6 @@ footer ul {
     }
 }
 
-
 /*** Landscape Phones and Down ***/
 
 @media (min-width: 190px) and (max-width: 480px) {
@@ -394,14 +380,17 @@ footer ul {
         padding-top: 5px;
         padding-bottom: 42px;
     }
+
     /*** NavBar Style - Prevents it from sitting on top of the content ***/
     .navbar-fixed-top {
         position: relative;
         top: auto;
     }
+
     .navbar-collapse {
         max-height: none;
     }
+
     /*** Style the Main Content & Containers for Mobile ***/
     .container-fluid,
     .row-fluid {
@@ -415,17 +404,21 @@ footer ul {
         resize: horizontal;
         width: 200px;
     }
+
     #search-input-container input:active {
         width: auto;
     }
+
     #search-input-container input:focus {
         min-width: 180px;
     }
+
     .btn-lg {
         font-size: 10px;
         color: black;
         margin-bottom: 5px;
     }
+
     #search-table,
     #song-table {
         margin-left: auto;
@@ -433,68 +426,83 @@ footer ul {
         width: 250px;
         border: solid 1px #fff;
     }
+
     #search-table td,
     #song-table td {
         text-align: center;
         color: #fff;
         font-size: 10px;
     }
+
     #search-table a,
     #song-table a {
         font-size: 12px;
     }
+
     #search-table td img,
     #song-table td img {
         width: 32px;
         height: 32px;
         margin: 2px 0;
     }
+
     #search-table h3,
     #song-table h3 {
         font-size: 12px;
     }
+
     /************************* Audio Player Style *************************/
     #audio-player audio {
         max-width: 200px;
     }
+
     /************************* Modal Style *************************/
     .modal-body {
         margin: 3px;
         padding: 2px;
     }
+
     .modal input {
         resize: horizontal;
         width: 200px;
     }
+
     .modal input:active {
         width: auto;
     }
+
     .modal input:focus {
         min-width: 180px;
     }
+
     /************************* Contact Form Style *************************/
     .contact-form {
         margin: 3px;
         padding: 2px;
     }
+
     .contact-form input,
     .contact-form textarea {
         resize: horizontal;
         width: 200px;
     }
+
     .contact-form input:active,
     .contact-form textarea:active {
         width: auto;
     }
+
     .contact-form input:focus,
     .contact-form textarea:focus {
         min-width: 180px;
     }
+
     /************************* Footer Style *************************/
     footer p {
         font-size: 10px;
         margin-top: 24px;
     }
+
     footer ul {
         color: #f0ad4e;
         font-size: 14px;
